
# TODO
# foreach day: days
#     ...
# endforeach

executable(
	'day-01', ['day-01.cc'], 
	dependencies: [utils_dep],
	cpp_args: [],
	link_args: [],
	install: false,
	build_by_default: true
)

executable(
	'day-02', ['day-02.cc'], 
	dependencies: [utils_dep],
	cpp_args: [],
	link_args: [],
	install: false,
	build_by_default: true
)
